--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "Forth day of api-so-project.olympics",
   "main": "index.js",
   "scripts": {
-    "test": "node tests/initialize.js && mocha tests/test.js && npm run lint",
+    "test": "mocha tests/test.js",
     "lint": "eslint --fix .",
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "makeMigrate": "knex migrate:make --knexfile models/knexfile.js",
-    "migrate": "knex migrate:latest --knexfile models/knexfile.js",
-    "rollback": "knex migrate:rollback --knexfile models/knexfile.js ",
+    "makeMigrate": "knex migrate:make --knexfile knexfile.js",
+    "migrate": "knex migrate:latest --knexfile knexfile.js",
+    "rollback": "knex migrate:rollback --knexfile knexfile.js ",
+    "makeMigration": "knex migrate:make",
+    "makeSeed": "knex seed:make",
+    "seed": "knex seed:run",
     "precommit": "pretty-quick --staged"
   },
   "author": "Takahiro Kan",
@@ -25,6 +28,7 @@
   },
   "devDependencies": {
     "chai": "^4.0.2",
+    "chai-http": "^4.3.0",
     "eslint": "^5.7.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-config-problems": "^1.1.0",
