--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "knex": "^0.15.2",
     "moment": "^2.22.2",
+    "dotenv": "^10.0.0",
     "pg": "^8.7.1"
   },
   "devDependencies": {
