--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint --fix .",
     "start": "node index.js",
     "dev": "nodemon index.js",
+    "init": "knex init",
     "makeMigrate": "knex migrate:make --knexfile knexfile.js",
     "migrate": "knex migrate:latest --knexfile knexfile.js",
     "rollback": "knex migrate:rollback --knexfile knexfile.js ",
